fix: changing overflow to auto on alert list

--- a/src/Command/Components/Alerts/Alerts.css
+++ b/src/Command/Components/Alerts/Alerts.css
@@ -122,7 +122,7 @@ rux-accordion rux-status {
   display: flex;
   flex-direction: column;
   background-color: var(--color-background-surface-default);
-  overflow-y: scroll;
+  overflow-y: auto;
   flex-grow: 1;
   padding-left: 0;
   margin: 0;
